Tue Jan 19 22:47:38 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepoServ.h:
        * dds/InfoRepo/DCPSInfoRepoServ.cpp:
        * dds/InfoRepo/DCPSInfo_i.h:
        * dds/InfoRepo/DCPSInfo_i.cpp:

          Added finalize operation on TAO_DDS_DCPSInfo_i to cleanup
          state when the DCPSInfoRepo is shutdown.

Tue Jan 19 22:22:48 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendBuffer.h:
        * dds/DCPS/transport/framework/TransportSendStrategy.h:
        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:
        * dds/DCPS/transport/multicast/MulticastDataLink.h:
        * dds/DCPS/transport/multicast/MulticastDataLink.inl:
        * dds/DCPS/transport/multicast/MulticastReceiveStrategy.h:
        * dds/DCPS/transport/multicast/MulticastSendStrategy.h:
        * dds/DCPS/transport/multicast/MulticastTransport.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:

          Re-worked refcounting behavior.

        * dds/DCPS/transport/multicast/MulticastConfiguration_rch.h:
        * dds/DCPS/transport/multicast/MulticastTransport_rch.h:

          Removed these files.

Tue Jan 19 17:20:16 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * docs/html/multicast/multicast.html:

          Updated documentation.

Tue Jan 19 17:13:18 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DisjointSequence.h:
        * dds/DCPS/DisjointSequence.inl:
        * dds/DCPS/DisjointSequence.cpp:

          Added support for checking overflowed sequences.

        * dds/DCPS/transport/framework/TransportImpl.cpp:

          Fixed GCC warnings related to unused parameters.

        * dds/DCPS/transport/multicast/MulticastTransport.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
        * dds/DCPS/transport/multicast/ReliableMulticast.h: