@@ -1,3 +1,9 @@
+Tue Jan 19 22:55:47 UTC 2010  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
+
+          Minor resource management updates.
+
 Tue Jan 19 22:47:38 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * dds/InfoRepo/DCPSInfoRepoServ.h:
